Hbae安装